plugins {
  id 'java'
  id 'org.springframework.boot' version '4.0.6'
  id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.kranker'
version = '0.0.1-SNAPSHOT'
description = 'order-service'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(17)
  }
}

repositories {
  mavenCentral()
}

ext {
  set('springCloudVersion', "2025.1.1")
}

dependencies {
  implementation 'org.springframework.boot:spring-boot-starter-actuator'
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  implementation 'org.springframework.boot:spring-boot-starter-kafka'
  implementation 'org.springframework.boot:spring-boot-starter-validation'
  implementation 'org.springframework.boot:spring-boot-starter-webmvc'
  implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
  implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
  implementation 'io.github.resilience4j:resilience4j-spring-boot3'
  implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'
  runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
  compileOnly 'org.projectlombok:lombok'
  runtimeOnly 'org.postgresql:postgresql'
  annotationProcessor 'org.projectlombok:lombok'
  testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
  testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
  testImplementation 'org.springframework.boot:spring-boot-starter-kafka-test'
  testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
  testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
  testCompileOnly 'org.projectlombok:lombok'
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
  testAnnotationProcessor 'org.projectlombok:lombok'
}

dependencyManagement {
  imports {
    mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
  }
}

tasks.named('test') {
  useJUnitPlatform()
}
